# aionrs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  e2e.yml  release-please.yml  release.yml  renovate-hakari.yml
crates/aion-agent/: Cargo.toml
crates/aion-agent/src/: bootstrap.rs  bootstrap_test.rs  context.rs  context_test.rs  engine.rs  engine_test.rs  error.rs  lib.rs  orchestration.rs  orchestration_test.rs  spawner.rs  spawner_test.rs  tool_call.rs  tool_call_test.rs  tool_policy.rs  tool_policy_test.rs  turn.rs
crates/aion-agent/tests/: autocompact_test.rs  bootstrap_test.rs  engine_compact_test.rs  engine_test.rs  output_compaction_test.rs  spawn_description_test.rs  spawn_test.rs
crates/aion-cli/: Cargo.toml
crates/aion-cli/src/: bootstrap.rs  cli.rs  cli_test.rs  main.rs  run.rs
crates/aion-config/src/: auth.rs  compat.rs  compat_test.rs  config.rs
crates/aion-mcp/tests/: streamable_http_crlf.rs
crates/aion-protocol/src/: commands.rs  commands_test.rs  events.rs  events_test.rs  writer_test.rs
crates/aion-protocol/tests/: capability_discovery_test.rs  set_config.rs
crates/aion-providers/src/: anthropic.rs  anthropic_shared.rs  anthropic_shared_test.rs  bedrock.rs  composed.rs  lib.rs  openai.rs  openai_messages.rs  (+11 more)
crates/aion-tools/: Cargo.toml
crates/aion-tools/src/: exec_command.rs  lib.rs  tool.rs  view_image.rs  view_image_test.rs
crates/aion-types/: Cargo.toml
docs/: advanced.md  getting-started.md  json-stream-protocol.md  providers.md  skills.md
workspace-hack/: Cargo.toml
(+33 files in other folders)
