[package]
name = "aion-tools"
description = "Built-in agent tools for aionrs (Read, Write, Edit, ExecCommand, Grep, Glob, Spawn)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aion-types.workspace    = true
aion-protocol.workspace = true
aion-config.workspace   = true
aion-process.workspace  = true

tracing.workspace     = true
tokio.workspace       = true
futures.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
anyhow.workspace      = true
base64.workspace      = true
glob.workspace        = true
lru.workspace         = true
workspace-hack.workspace = true

[dev-dependencies]
tempfile.workspace = true
